[package]
name = "gpx-web-utils"
version = "0.0.1"
authors = ["Matthew Dillon <matthewrdillon@gmail.com>"]
edition = "2018"
description = "just some gpx-related tools that i want to use"
repository = "https://github.com/thermokarst/gpx-web-utils"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.63"
js-sys = "0.3.45"
gpx = "0.8.1"

console_error_panic_hook = { version = "0.1.6", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[profile.release]
opt-level = 3
lto = true
